name:           test
category:       Operators
version:        0.0.1
author:         Heather Cynede
maintainer:     Heather Cynede <Cynede@Gentoo.org>
license:        BSD3
license-file:   LICENSE
synopsis:       test
description:    test

build-type: Simple
cabal-version: >= 1.8

library
  Hs-Source-Dirs: src

  exposed-modules:
    Haskellplusplus

  Build-Depends:  
    base >= 4.3 && < 5
